package animal;

public class Dog extends SwimAnimal {

    public Dog(String name) {
        super(name, 500, 0.5, 30);
    }
}